# QoverRap

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
.maestro/: qr-scan-common.yaml  qr-scan-generic.yaml  qr-scan-samsung.yaml
.omc/: project-memory.json
.omc/harness-state/: read-log.txt  test-history.json
.omc/plans/: demo-webapp-plan.md
.omc/sessions/: 00bc87c6-edc3-401f-97c6-7df19f5320fa.json  38aaa05c-c476-4547-94de-0820324f6c7f.json  9a147f6f-8f1e-433c-9ce6-3c3dae1f2c66.json  a351fd24-b400-4ed3-9df6-182be2796a4e.json  bf52be9e-e2c1-418d-97af-9e4aa7b6a77a.json  d694e04a-46a8-48d6-bc6e-337e4346aa2e.json  e4f7ddaa-e5ea-4bd1-ac72-d795dd08545c.json
.omc/state/: hud-state.json  hud-stdin-cache.json  subagent-tracking.json
brainstorming/: 00_problem-framing.md  01_channel-strategy.md  02_style-guide.md  03_seo-geo-aeo-playbook.md  04_patent-workflow-kr.md  05_qr-layering-feasibility-protocol.md  06_post-pipeline-and-checklists.md  07_weekly-editorial-calendar.md  08_milestone-narrative-framework.md  09_metrics-and-feedback-loop.md  10_question-registry.md  README.md  blog-post.template.md
demo/: README.md
demo/backend/: main.py  schemas.py  trust_registry.py
demo/frontend/: index.html  package-lock.json  (+2 more)
scripts/: capture_figures.sh  cleanup_demo_figures.sh  collect-results.py  density_scan_test.py  epo_search.py  generate_density_qrs.py  generate_test_qrs.py  kipris_search.py  physical_scan_test.py  qr-display-server.py  render_patent_figures.sh  run-physical-test.sh
tests/: README.md  conftest.py  test_test_plan_docs.py
(+95 files in other folders)
